--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rgafd"
+   ]
   },
   {
    "cell_type": "markdown",
