automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,11 +166,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "*star*"
+   ]
   },
   {
    "cell_type": "markdown",
